# rowan-python

./: .envrc  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.codex-plugin/: plugin.json
.github/workflows/: build-and-deploy-docs.yml  publish-skill.yml  python-publish.yml  test.yml
docs/: index.md  rowan_rdkit.md
docs/stylesheets/: colors.css
examples/: PROTAC_solubility.py  admet.py  analogue_docking.py  aqueous_solubility.py  basic_calculation.py  basic_calculation_from_json.py  basic_calculation_with_constraint.py  basic_calculation_with_solvent.py  batch_docking.py  bde.py  binding_affinity.py  boltz_paired_msa.py  boltz_single_msa.py  chai_paired_msa.py  chai_single_msa.py  cofolding_screen.py  colabfold_paired_msa.py  colabfold_single_msa.py  conformer_dependent_redox.py  conformers.py  conformers_screen.py  covalent_docking.py  covalent_inhibitor_scan.py  dcd_download.py  descriptors.py  docking.py  docking_screen.py  double_ended_ts_search.py  electronic_properties.py  estimate_workflow.py  fukui_index.py  hydrogen_bond_basicity.py  interaction_energy_decomposition.py  ion_mobility.py  irc.py  macropka.py  membrane_permeability.py  multistage_opt.py  multistage_optimization.py  nmr.py  (+27 more)
examples/data/: Al_FCC.xyz  citalopram_1iep.xyz  ibuprofen_conformers.sdf  tyk2_ligands.sdf  workflow_example.json
msa_directory/: seq_0.csv  seq_1.csv
msa_directory/paired/: pair.sh
msa_directory/unpaired/: bfd.mgnify30.metaeuk30.smag30.a3m  msa.sh  pdb70.m8  uniref.a3m
rowan/: __init__.py  api_keys.py  calculation.py  client.py  config.py  constants.py  folder.py  molecule.py  project.py  protein.py  protein_cofolding.py  results.py  test_utils.py  types.py  user.py  utils.py  workflow.py
rowan/rowan_rdkit/: __init__.py  chem_utils.py
rowan/workflows/: __init__.py  admet.py  analogue_docking.py  base.py  basic_calculation.py  batch_docking.py  bde.py  binding_affinity.py  conformer_search.py  constants.py  covalent_inhibitor_scan.py  descriptors.py  docking.py  double_ended_ts_search.py  electronic_properties.py  fukui.py  hydrogen_bond_basicity.py  hydrogen_bond_donor_acceptor_strength.py  interaction_energy_decomposition.py  ion_mobility.py  irc.py  macropka.py  membrane_permeability.py  msa.py  multistage_optimization.py  nmr.py  pka.py  pocket_detection.py  pose_analysis_md.py  protein_binder_design.py  protein_cofolding.py  protein_md.py  rbfe_graph.py  redox_potential.py  relative_binding_free_energy_perturbation.py  scan.py  solubility.py  solvent_dependent_conformers.py  spin_states.py  strain.py  (+1 more)
skills/computational-chemistry-and-biology/: SKILL.md
skills/computational-chemistry-and-biology/reference/: admet.md  analogue_docking.md  basic_calculation.md  batch_docking.md  bde.md  binding_affinity.md  conformer_search.md  covalent_inhibitor_scan.md  descriptors.md  docking.md  double_ended_ts_search.md  electronic_properties.md  folders_and_projects.md  fukui.md  hydrogen_bond_donor_acceptor_strength.md  interaction_energy_decomposition.md  ion_mobility.md  irc.md  macropka.md  mcp_execution.md  membrane_permeability.md  msa.md  multistage_optimization.md  nmr.md  pka.md  pocket_detection.md  pose_analysis_md.md  protein_binder_design.md  protein_cofolding.md  protein_md.md  protein_prep.md  python_sdk.md  rbfe_graph.md  redox_potential.md  relative_binding_free_energy_perturbation.md  scan.md  solubility.md  solvent_dependent_conformers.md  spin_states.md  strain.md  (+2 more)
skills/computational-chemistry-and-biology/scripts/: check_env.py
tests/: test_macropka_loop.py
